# kodex

./: .gitignore  CHANGELOG.md  CLAUDE.md.example  Cargo.toml  KNOWLEDGE_SYSTEM.md  README.md
obsidian-plugin/: README.md  main.ts  manifest.json
src/: actor.rs  benchmark.rs  cache.rs  diff.rs  embedding.rs  error.rs  fingerprint.rs  hierarchy.rs  hooks.rs  id.rs  import.rs  ingest_knowledge.rs  install.rs  knowledge.rs  learn.rs  lib.rs  main.rs  reasoning.rs  recommend.rs  registry.rs  report.rs  source_lookup.rs  storage.rs  transcribe.rs  types.rs  validate.rs  vault.rs  watch.rs  workspace.rs
src/analyze/: co_change.rs  communities.rs  compare.rs  god_nodes.rs  helpers.rs  mod.rs  questions.rs  rename_detect.rs  surprising.rs
src/cluster/: cohesion.rs  louvain.rs  mod.rs
src/commands/: embed.rs  mod.rs  query.rs  run.rs  serve.rs  workspace.rs
src/detect/: classify.rs  ignore.rs  manifest.rs  mod.rs  paper.rs  sensitive.rs
src/export/: canvas.rs  cypher.rs  graphml.rs  html.rs  json_export.rs  mod.rs  obsidian.rs  wiki.rs
src/extract/: call_graph.rs  chunker.rs  config.rs  generic.rs  mod.rs
src/extract/languages/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  lua.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  scala.rs  swift.rs
src/graph/: build.rs  diff.rs  graph_impl.rs  mod.rs
src/ingest/: mod.rs
src/security/: label.rs  mod.rs  path.rs  url.rs
src/serve/: mod.rs  traversal.rs
tests/: integration.rs
tests/fixtures/: sample.go  sample.js  sample.py  sample.rs
